test | GIDK-1tfrcu | Aditi | alignment issue in discount

--- a/apps/web-giddh/src/app/ledger/components/updateLedgerDiscount/updateLedgerDiscount.component.scss
+++ b/apps/web-giddh/src/app/ledger/components/updateLedgerDiscount/updateLedgerDiscount.component.scss
@@ -34,8 +34,10 @@
     width: 50px;
 }
 .percent-wrapper{
-   width: 100px;
-   padding-right: 20px !important;
+    .form-control{
+        width: 100px;
+        padding-right: 20px !important;
+    }
    .fa-percent{
        top: 9px;
        right: 6px;
